@@ -22,6 +22,7 @@
 #include <inttypes.h>
 #include <net/ethernet.h>
 #include <sys/types.h>
+#include <stdbool.h>
 
 #include "sd-device.h"
 #include "sd-dhcp6-lease.h"
@@ -263,7 +264,10 @@ int sd_dhcp6_client_set_address_request(sd_dhcp6_client *client,
                                         int request);
 int sd_dhcp6_client_add_vendor_option(sd_dhcp6_client *client,
                                       sd_dhcp6_option *v);
-int sd_dhcp6_client_set_rapid_commit(sd_dhcp6_client *client, int enable);
+int sd_dhcp6_client_set_rapid_commit(sd_dhcp6_client *client,
+                                     int enable);
+int sd_dhcp6_client_set_send_release(sd_dhcp6_client *client,
+                                     bool enable);
 
 int sd_dhcp6_client_get_lease(
                 sd_dhcp6_client *client,
